--- a/src/machinelearning/index.html
+++ b/src/machinelearning/index.html
@@ -82,7 +82,7 @@
   <script src="js/application.js"></script>
   <script type="text/javascript">
   $("li.todo-done").each(function() {
-     console.log($(this).text())
+     console.log($.trim($(this).text()))
 });</script>
   </body>
 </html>
