Frontend almost done

--- a/src/machinelearning/index.html
+++ b/src/machinelearning/index.html
@@ -9,7 +9,7 @@
   <div class="container">
     <div class="todo mrm">
       <ul>
-        <li class="todo-done">
+        <li>
           <span class="todo-name">Male</span>
         </li>
 
@@ -81,8 +81,6 @@
   <script src="js/jquery.placeholder.js"></script>
   <script src="js/application.js"></script>
   <script type="text/javascript">
-  $("li.todo-done").each(function() {
-     console.log($.trim($(this).text()))
-});</script>
+  </script>
   </body>
 </html>
